# AgenticFleet

./: .env.vault  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DOCKER.md  Makefile  README.md  install_deps.sh  main.py  pyproject.toml  pytest.ini  test.prompt.yml
.cursor/: README.md
.cursor/rules/: README.md
.cursor/rules/best_practices/: agent_patterns.md  async_patterns.md  error_handling.md
.cursor/rules/formatting/: black.toml
.cursor/rules/isolation_rules/: main.mdc
.cursor/rules/isolation_rules/Core/: command-execution.mdc
.cursor/rules/isolation_rules/Level2/: task-tracking-basic.mdc  workflow-level2.mdc
.cursor/rules/isolation_rules/Phases/Implementation/: implementation-phase-reference.mdc
.cursor/rules/isolation_rules/visual-maps/: creative-mode-map.mdc  implement-mode-map.mdc  plan-mode-map.mdc  planning-mode-map.mdc  reflect-mode-map.mdc
.cursor/rules/linting/: pylint.toml
.cursor/rules/style_guide/: python_style.md  python_style_guide.md
.cursor/settings/: code-analysis.json  cursor.json  keybindings.json  project-structure.json
.cursor/snippets/: python.json
.devcontainer/: devcontainer.json  docker-compose.yml  post-create.sh
.github/workflows/: ci.yml  codecov.yml  codeql.yml
config/: README.md  model_config.yaml  user_settings.json
docker/: .dockerignore  docker-compose.yml
docs/: api-reference.md  api_reference.md  cleanup_plan.md  cli_commands.md  configuration.md  contributing.md  getting_started.md  graph-flow.ipynb  troubleshooting.md
public/: custom.css  custom_renderer.js  theme.json
scripts/: agenticfleet.py  docker-build.sh  docker-entrypoint.sh  loop_fix_until_all_tests_pass.sh  publish.sh  run.py  setup_chainlit.sh
src/agentic_fleet/: __init__.py  app.py  chainlit_app.py  cli.py  main.py
src/agentic_fleet/agent_registry/: __init__.py
src/agentic_fleet/api/: app.py  fastapi_app.py
src/agentic_fleet/api/dependencies/: __init__.py  services.py
src/agentic_fleet/api/middleware/: auth_middleware.py  logging_middleware.py
src/agentic_fleet/api/routes/: agents.py  chat.py  tasks.py
src/agentic_fleet/apps/chainlit_ui/agent_registry/: default_agents.py
src/agentic_fleet/apps/chainlit_ui/components/chat/: message.py
src/agentic_fleet/apps/chainlit_ui/components/sidebar/: profile.py
src/agentic_fleet/apps/chainlit_ui/components/toolbar/: actions.py
src/agentic_fleet/apps/examples/: README.md  app_team_user_proxy.py  basic_agent_chat.py  config.yaml
src/agentic_fleet/config/: README.md  __init__.py  agents.yaml  memory.yaml
src/agentic_fleet/config/models/: __init__.py
src/agentic_fleet/config/settings/: __init__.py  models.py  users_session.py
src/agentic_fleet/core/: bootstrap.py  utils.py
src/agentic_fleet/core/agents/: base.py  coding_agent.py  mind_map_agent.py  orchestrator.py  prompt.yaml  registry.py  smart_agent.py  team.py  team_factory.py  team_manager.py  web_search_agent.py
src/agentic_fleet/core/api/rest/: application.py
src/agentic_fleet/core/application/: app_manager.py  bootstrap.py  context.py  manager.py  models.py
src/agentic_fleet/core/application/models/: fleet_config.yaml  model_config.yaml
src/agentic_fleet/core/llm/integrations/dspy_ext/: compiler.py  modules.py  reasoning.py
src/agentic_fleet/core/models/: messages.py
src/agentic_fleet/core/reasoning/: __init__.py  retrieval_reasoning.py
src/agentic_fleet/core/tools/code_execution/: code_execution_tool.py
src/agentic_fleet/core/tools/mind_map/: mind_map_tool.py
src/agentic_fleet/core/tools/web_search/: web_search_tool.py
src/agentic_fleet/core/workflows/orchestration/: reasoning.py
src/agentic_fleet/database/: session.py
src/agentic_fleet/database/models/: agent.py  message.py  task.py
src/agentic_fleet/exceptions/: api.py  database.py
src/agentic_fleet/message_processing/: __init__.py
src/agentic_fleet/models/: models.py
src/agentic_fleet/pool/mcp/: mcp_factory.py  mcp_handlers.py
src/agentic_fleet/runners/: __init__.py  api_runner.py  chainlit_runner.py  fastapi_runner.py
src/agentic_fleet/schemas/: __init__.py  agent.py  message.py  task.py
src/agentic_fleet/services/: agent_service.py  chat_service.py  client_factory.py  message_processing.py  task_service.py
src/agentic_fleet/shared/message_processing/: processors.py
src/agentic_fleet/tools/: bing_search.py  fetch_webpage.py  generate_image.py  generate_pdf.py  google_search.py
src/agentic_fleet/ui/: __init__.py  message_handler.py  settings_handler.py  task_manager.py
src/agentic_fleet/ui/chainlit/: components.py  handlers.py
src/agentic_fleet/ui/components/: canvas_panel.py  mcp_panel.py
src/agentic_fleet/utils/: batch_processor.py  caching.py  error_handling.py  message_processor.py
tests/: README.md  run_tests.py  run_tests.sh  test_agent_team_integration.py  test_api.py  test_application_manager.py  test_client_factory_extended.py  test_config_manager.py  test_message_handler.py  test_settings_handler.py  test_task_manager.py
tests/agents/: test_magentic_one.py
tests/services/: test_client_factory.py  test_message_processing.py
tests/unit/: test_chainlit_app.py  test_cli.py  test_coding_agent.py  test_models.py  test_system_message.py  test_websocket.py
